--- a/Ansible-Lab/Vagrantfile
+++ b/Ansible-Lab/Vagrantfile
@@ -10,17 +10,14 @@ Vagrant.configure("2") do |config|
       # Define the "base image" and the hostname for the VM
       node.vm.box = "generic/ubuntu2004"
       node.vm.hostname = "node-#{i}"
+      node.vm.network :private_network, type: "dhcp"
 
       # Ask vmware_workstaion to make the following changes...
       node.vm.provider "vmware_workstation" do |vm|
       
         # configure the VM to have 1 core and 2GB of ram
-        vm.vmx["numcpus"] = "1"
-        vm.vmx["memsize"] = "2048"
-
-        # then tell it to use NATing but set a vnet for me to fall back on for schenanigans
-        vm.vmx["ethernet0.connectiontype"] = "custom"
-        vm.vmx["ethernet0.vnet"] = "/dev/vmnet2"
+        vm.memory = 2048
+        vm.cpus = 1
     
       end
 
@@ -42,17 +39,15 @@ Vagrant.configure("2") do |config|
       # Use the generic ubuntu 2004 base image and set the hostname
       ansible_server.vm.box = "generic/ubuntu2004"
       ansible_server.vm.hostname = "ansible-#{i}"
+      ansible_server.vm.network :private_network, type: "dhcp"
 
       # Ask vmware_workstation to make the following changes...
       ansible_server.vm.provider "vmware_workstation" do |ansible_server_provider|
 
         # Configure the VM to have 2 cores and 4GB of ram
-        ansible_server_provider.vmx["numcpus"] = "2"
-        ansible_server_provider.vmx["memsize"] = "4096"
+        ansible_server_provider.memory = 4096
+        ansible_server_provider.cpus = 2
 
-        # then tell it to use NATing but set a vnet for me to fall back on for schenanigans
-        ansible_server_provider.vmx["ethernet0.connectiontype"] = "custom"
-        ansible_server_provider.vmx["ethernet0.vnet"] = "/dev/vmnet2"
       end
 
       # Install Ansible on the host VM
