--- a/Ansible-Lab/Vagrantfile
+++ b/Ansible-Lab/Vagrantfile
@@ -10,6 +10,7 @@ Vagrant.configure("2") do |config|
       # Define the "base image" and the hostname for the VM
       node.vm.box = "generic/ubuntu2004"
       node.vm.hostname = "node-#{i}"
+      node.vm.network "private_network", type: "dhcp"
 
       # Ask vmware_workstaion to make the following changes...
       node.vm.provider "vmware_workstation" do |vm|
@@ -17,12 +18,10 @@ Vagrant.configure("2") do |config|
         # configure the VM to have 1 core and 2GB of ram
         vm.memory = 2048
         vm.cpus = 1
-
-        vm.vmx["ethernet0.connectionType"] = "nat"
     
       end
 
-      # Patch the Target
+      # Patch the Target - only use this for Persistent lab.
       #node.vm.provision "shell", inline: "apt -y update && apt -y upgrade"
 
     # End of the Virtual Machine Definition
@@ -40,7 +39,7 @@ Vagrant.configure("2") do |config|
       # Use the generic ubuntu 2004 base image and set the hostname
       ansible_server.vm.box = "generic/ubuntu2004"
       ansible_server.vm.hostname = "ansible-#{i}"
-      ansible_server.vm.network :private_network, type: "dhcp"
+      ansible_server.vm.network "private_network", type: "dhcp"
 
       # Ask vmware_workstation to make the following changes...
       ansible_server.vm.provider "vmware_workstation" do |ansible_server_provider|
@@ -49,12 +48,16 @@ Vagrant.configure("2") do |config|
         ansible_server_provider.memory = 4096
         ansible_server_provider.cpus = 2
 
-        ansible_server_provider.vmx["ethernet0.connectionType"] = "nat"
-
       end
 
-      # Install Ansible on the host VM
+      # Sync the directory with our config to the ansible config directory of OOB use.
+      ansible_server.vm.synced_folder "scripts", "/etc/ansible/"
+
+      # Install Ansible on the host VM. Install ansible and requirements for lab.
+      #sshpass - required for ansible to m ping lab nodes.
+      ansible_server.vm.provision "shell", inline: "apt update && apt -y upgrade"
       ansible_server.vm.provision "shell", inline: "apt install -y ansible"
+      ansible_server.vm.provision "shell", inline: "apt install -y sshpass"
 
     # End of the Virtual Machine Config
     end
